fixing errors from html validator

--- a/home.html
+++ b/home.html
@@ -41,8 +41,8 @@
       <!-- Cookie Banner -->
 
       <!-- Main Header Section -->
-      <section class="header" role="banner">
-        <nav role="navigation">
+      <section class="header">
+        <nav>
           <a href="/home.html">
             <img
               src="/images/work-balance-logov5.svg"
@@ -61,12 +61,7 @@
           </label>
 
           <!-- Navigation links -->
-          <aside
-            class="nav-links"
-            id="navLinks"
-            role="navigation"
-            aria-label="Main Navigation"
-          >
+          <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
             <ul>
               <li><a href="home.html">Home</a></li>
               <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
@@ -244,7 +239,7 @@
       </section>
 
       <!-- Footer Section -->
-      <footer class="footer" role="contentinfo">
+      <footer class="footer">
         <p class="quick-link-name"><strong>Quick Links:</strong></p>
         <ul class="quick-links">
           <li><a href="home.html">Home</a></li>
