--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <!-- Section 1: Header -->
-    <header class="header" role="banner">
+    <header class="header">
       <nav>
         <a href="/home.html">
           <img
@@ -58,12 +58,7 @@
         </label>
 
         <!-- Navigation links -->
-        <aside
-          class="nav-links"
-          id="navLinks"
-          role="navigation"
-          aria-label="Main Navigation"
-        >
+        <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
           <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
@@ -165,7 +160,7 @@
       </section>
     </section>
 
-    <footer class="footer" role="contentinfo">
+    <footer class="footer">
       <p class="quick-link-name"><strong>Quick Links:</strong></p>
       <ul class="quick-links">
         <li><a href="home.html">Home</a></li>
