--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!-- Cookie Banner -->
-    <section class="cookie-banner" role="dialog" aria-label="Cookie Notice">
+    <section class="cookie-banner" aria-label="Cookie Notice">
       <p>
         We use cookies to enhance your experience. By continuing to visit this
         site, you agree to our use of cookies.
@@ -40,7 +40,7 @@
     </section>
 
     <!-- Section 1: Header -->
-    <header class="header" role="banner">
+    <header class="header">
       <nav>
         <a href="/home.html">
           <img
@@ -60,12 +60,7 @@
         </label>
 
         <!-- Navigation links -->
-        <aside
-          class="nav-links"
-          id="navLinks"
-          role="navigation"
-          aria-label="Main Navigation"
-        >
+        <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
           <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="/wellbeing-tips.html">Wellbeing Tips</a></li>
