--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="/css/contact.css" />
+    <link rel="stylesheet" type="text/css" href="css/contact.css" />
   </head>
   <body>
     <!-- Section 1: Header -->
