removing slashes from images

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/images/work-balance-favicon.png"
+      href="images/work-balance-favicon.png"
     />
 
     <!-- Style Link -->
@@ -40,9 +40,9 @@
     <!-- Section 1: Header -->
     <header class="header">
       <nav>
-        <a href="/home.html">
+        <a href="index.html">
           <img
-            src="/images/work-balance-logov5.svg"
+            src="images/work-balance-logov5.svg"
             class="logo-navbar"
             alt="Work Balance Logo"
             title="Work Balance Logo"
@@ -60,7 +60,7 @@
         <!-- Navigation links -->
         <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
             <li><a href="quick-breaks.html">Quick Breaks</a></li>
             <li><a href="#">Chill Spots</a></li>
@@ -88,7 +88,7 @@
       <section class="content-wrapper">
         <figure class="picture">
           <img
-            src="/images/Contact-Page-picture.webp"
+            src="images/Contact-Page-picture.webp"
             alt="Placeholder image representing contact form illustration"
             class="contact-image"
           />
@@ -163,7 +163,7 @@
     <footer class="footer">
       <p class="quick-link-name"><strong>Quick Links:</strong></p>
       <ul class="quick-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
         <li><a href="quick-breaks.html">Quick Breaks</a></li>
         <li><a href="#">Chill Spots</a></li>
@@ -172,11 +172,11 @@
       </ul>
       <section class="bottom-section">
         <figure class="logo">
-          <a href="home.html"
+          <a href="index.html"
             ><img
               alt="Placeholder logo image"
               class="logo-footer"
-              src="/images/work-balance-logo-white.svg"
+              src="images/work-balance-logo-white.svg"
               title="Work Balance Footer Logo"
           /></a>
         </figure>
