--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/images/work-balance-favicon.png"
+      href="images/work-balance-favicon.png"
     />
 
     <!-- Style Link -->
@@ -41,56 +41,76 @@
       <!-- Cookie Banner -->
 
       <!-- Main Header Section -->
-      <section class="header">
-        <nav>
-          <a href="/home.html">
-            <img
-              src="/images/work-balance-logov5.svg"
-              class="logo-navbar"
-              alt="Work Balance Logo"
-              title="Work Balance company logo"
-            />
-          </a>
+      <!DOCTYPE html>
+      <html lang="en">
+        <head>
+          <meta charset="UTF-8" />
+          <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+          />
+          <link rel="stylesheet" href="css/style.css" />
+          <title>Work Balance</title>
+        </head>
+        <body>
+          <!-- Main Header Section -->
+          <section class="hero">
+            <!-- Navigation -->
+            <nav>
+              <a href="home.html">
+                <img
+                  src="images/work-balance-logov5.svg"
+                  class="logo-navbar"
+                  alt="Work Balance Logo"
+                  title="Work Balance company logo"
+                />
+              </a>
 
-          <!-- Hidden checkbox for toggling the menu -->
-          <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+              <!-- Hidden checkbox for toggling the menu -->
+              <input type="checkbox" id="menu-toggle" class="menu-toggle" />
 
-          <!-- Label for the menu button -->
-          <label for="menu-toggle" class="menu-icon">
-            <i class="fa fa-bars" aria-label="Open Menu"></i>
-          </label>
+              <!-- Label for the menu button (Hamburger Menu) -->
+              <label for="menu-toggle" class="menu-icon">
+                <i class="fa fa-bars" aria-label="Open Menu"></i>
+              </label>
 
-          <!-- Navigation links -->
-          <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
-            <ul>
-              <li><a href="home.html">Home</a></li>
-              <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
-              <li><a href="quick-breaks.html">Quick Breaks</a></li>
-              <li><a href="#">Chill Spots</a></li>
-              <li><a href="#">Workspace Tips</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <label for="menu-toggle" class="close-icon">Close</label>
-          </aside>
-        </nav>
+              <!-- Navigation links -->
+              <aside
+                class="nav-links"
+                id="navLinks"
+                aria-label="Main Navigation"
+              >
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
+                  <li><a href="quick-breaks.html">Quick Breaks</a></li>
+                  <li><a href="#">Chill Spots</a></li>
+                  <li><a href="#">Workspace Tips</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <label for="menu-toggle" class="close-icon">Close</label>
+              </aside>
+            </nav>
 
-        <!-- Hero Section -->
-        <header class="text-box">
-          <h1>Welcome to <strong>Work Balance!</strong></h1>
-          <p>
-            <strong
-              ><em
-                >Your one stop solution for remote work wellness and work-life
-                balance.</em
-              ></strong
-            >
-          </p>
-          <a href="wellbeing-tips.html" class="hero-btn"
-            >Mental Health Resources</a
-          >
-          <a href="contact.html" class="hero-btn">Contact Us</a>
-        </header>
-      </section>
+            <!-- Hero Section Content -->
+            <header class="text-box">
+              <h1>Welcome to <strong>Work Balance!</strong></h1>
+              <p>
+                <strong
+                  ><em
+                    >Your one-stop solution for remote work wellness and
+                    work-life balance.</em
+                  ></strong
+                >
+              </p>
+              <a href="wellbeing-tips.html" class="hero-btn"
+                >Mental Health Resources</a
+              >
+              <a href="contact.html" class="hero-btn">Contact Us</a>
+            </header>
+          </section>
+        </body>
+      </html>
 
       <!-- Supporting Information Section -->
       <section class="section2">
@@ -173,7 +193,7 @@
           </article>
           <figure class="section-col">
             <img
-              src="/images/using-laptop.webp"
+              src="images/using-laptop.webp"
               alt="Person using a laptop"
               title="Person using a laptop for work"
             />
@@ -187,7 +207,7 @@
         <article class="row">
           <figure class="section-col">
             <img
-              src="/images/playing-games.webp"
+              src="images/playing-games.webp"
               alt="Person playing games"
               title="Person enjoying a break by playing games"
             />
@@ -233,7 +253,7 @@
           mental health, or find time to relax, we are here to support you.
           Explore our resources today and work towards the balance you deserve.
         </p>
-        <a href="/wellbeing-tips.html" class="hero-btn"
+        <a href="wellbeing-tips.html" class="hero-btn"
           >Mental Health Resources</a
         >
       </section>
@@ -242,7 +262,7 @@
       <footer class="footer">
         <p class="quick-link-name"><strong>Quick Links:</strong></p>
         <ul class="quick-links">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
           <li><a href="quick-breaks.html">Quick Breaks</a></li>
           <li><a href="#">Chill Spots</a></li>
@@ -255,7 +275,7 @@
               ><img
                 alt="Placeholder logo image"
                 class="logo-footer"
-                src="/images/work-balance-logo-white.svg"
+                src="images/work-balance-logo-white.svg"
                 title="Work Balance Footer Logo"
             /></a>
           </figure>
