--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -28,9 +28,9 @@
     <!-- Section 1: Header -->
     <header class="header">
       <nav>
-        <a href="/home.html">
+        <a href="index.html">
           <img
-            src="/images/work-balance-logov5.svg"
+            src="images/work-balance-logov5.svg"
             class="logo-navbar"
             alt="Work Balance Logo"
             title="Work Balance Logo"
@@ -48,7 +48,7 @@
         <!-- Navigation links -->
         <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
             <li><a href="quick-breaks.html">Quick Breaks</a></li>
             <li><a href="#">Chill Spots</a></li>
@@ -81,10 +81,7 @@
       <article class="tip-item">
         <figure class="tip-figure">
           <div class="image-container">
-            <img
-              src="/images/connect-nature.webp"
-              alt="Connect a with nature"
-            />
+            <img src="images/connect-nature.webp" alt="Connect a with nature" />
           </div>
           <figcaption class="caption-container">
             <h3>Go out and connect with the nature</h3>
@@ -103,7 +100,7 @@
       <article class="tip-item">
         <figure class="tip-figure">
           <div class="image-container">
-            <img src="/images/taking-a-jog.webp" alt="Take a Walk" />
+            <img src="images/taking-a-jog.webp" alt="Take a Walk" />
           </div>
           <figcaption class="caption-container">
             <h3>2. Take a Walk or jog</h3>
@@ -123,7 +120,7 @@
       <article class="tip-item">
         <figure class="tip-figure">
           <div class="image-container">
-            <img src="/images/listening-to-music.webp" alt="Listen to music" />
+            <img src="images/listening-to-music.webp" alt="Listen to music" />
           </div>
           <figcaption class="caption-container">
             <h3>Listen to Music</h3>
@@ -148,7 +145,7 @@
       <article class="tip-item">
         <figure class="tip-figure">
           <div class="image-container">
-            <img src="/images/healthy-snack.webp" alt="Eat healthy snack" />
+            <img src="images/healthy-snack.webp" alt="Eat healthy snack" />
           </div>
           <figcaption class="caption-container">
             <h3>Hydrate and Snack</h3>
@@ -171,7 +168,7 @@
     <footer class="footer">
       <p class="quick-link-name"><strong>Quick Links:</strong></p>
       <ul class="quick-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
         <li><a href="quick-breaks.html">Quick Breaks</a></li>
         <li><a href="#">Chill Spots</a></li>
@@ -180,11 +177,11 @@
       </ul>
       <section class="bottom-section">
         <figure class="logo">
-          <a href="home.html"
+          <a href="index.html"
             ><img
               alt="Placeholder logo image"
               class="logo-footer"
-              src="/images/work-balance-logo-white.svg"
+              src="images/work-balance-logo-white.svg"
               title="Work Balance Footer Logo"
           /></a>
         </figure>
