--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -16,7 +16,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/images/work-balance-favicon.png"
+      href="images/work-balance-favicon.png"
     />
     <link
       rel="stylesheet"
@@ -42,9 +42,9 @@
     <!-- Section 1: Header -->
     <header class="header">
       <nav>
-        <a href="/home.html">
+        <a href="index.html">
           <img
-            src="/images/work-balance-logov5.svg"
+            src="images/work-balance-logov5.svg"
             class="logo-navbar"
             alt="Work Balance Logo"
             title="Work Balance Logo"
@@ -62,9 +62,9 @@
         <!-- Navigation links -->
         <aside class="nav-links" id="navLinks" aria-label="Main Navigation">
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="/wellbeing-tips.html">Wellbeing Tips</a></li>
-            <li><a href="/quick-breaks.html">Quick Breaks</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
+            <li><a href="quick-breaks.html">Quick Breaks</a></li>
             <li><a href="#">Chill Spots</a></li>
             <li><a href="#">Workspace Tips</a></li>
             <li><a href="#">Contact</a></li>
@@ -167,7 +167,7 @@
         </article>
         <figure class="section-col">
           <img
-            src="/images/girl-reading-book.webp"
+            src="images/girl-reading-book.webp"
             alt="Person reading a book"
             title="A person reading a book"
           />
@@ -181,7 +181,7 @@
       <section class="row">
         <figure class="section-col">
           <img
-            src="/images/playing-games.webp"
+            src="images/playing-games.webp"
             alt="Person playing games"
             title="A person playing video games"
           />
@@ -241,7 +241,7 @@
         </article>
         <figure class="section-col">
           <img
-            src="/images/seek-help-picture1.webp"
+            src="images/seek-help-picture1.webp"
             alt="Person seeking help"
             title="A person seeking help from a therapist"
           />
@@ -255,7 +255,7 @@
       <section class="row">
         <figure class="section-col">
           <img
-            src="/images/playing-table-games.webp"
+            src="images/playing-table-games.webp"
             alt="Person playing table games"
             title="A person playing a table game"
           />
@@ -383,20 +383,20 @@
     <footer class="footer">
       <p class="quick-link-name"><strong>Quick Links:</strong></p>
       <ul class="quick-links">
-        <li><a href="/home.html">Home</a></li>
-        <li><a href="/wellbeing-tips.html">Wellbeing Tips</a></li>
-        <li><a href="/quick-breaks.html">Quick Breaks</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="wellbeing-tips.html">Wellbeing Tips</a></li>
+        <li><a href="quick-breaks.html">Quick Breaks</a></li>
         <li><a href="#">Chill Spots</a></li>
         <li><a href="#">Workspace Tips</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <section class="bottom-section">
         <figure class="logo">
-          <a href="/home.html">
+          <a href="index.html">
             <img
               alt="Placeholder logo image"
               class="logo-footer"
-              src="/images/work-balance-logo-white.svg"
+              src="images/work-balance-logo-white.svg"
               title="Work Balance Logo"
             />
           </a>
