--- a/chill-spots.html
+++ b/chill-spots.html
@@ -8,9 +8,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="stylesheet" href="css/quick-breaks.css" />
+    <link rel="stylesheet" href="css/chill-spots.css" />
     <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
-    <title>Quick Breaks</title>
+    <title>Chill Spots</title>
   </head>
   <body>
     <main>
@@ -74,7 +74,7 @@
 
           <!-- Hero Message Container -->
           <section class="hero-message-container">
-            <h1 class="hero-heading">Quick Breaks</h1>
+            <h1 class="hero-heading">Chill Spots in Rotterdam</h1>
           </section>
         </section>
       </section>
@@ -82,18 +82,33 @@
     <section class="section-4">
       <section class="inner-section-4">
         <article>
-          <h2>Need a break?</h2>
-          <h3>
-            Here are some quick activities to refresh your mind and body during
-            your workday.
-          </h3>
+          <h2>
+            Looking for a relaxed spot in Rotterdam? You are in the right place!
+          </h2>
+          <h3>Here are four unique chill spots in Rotterdam</h3>
           <p>
-            The Well being tips page emphasizes the importance of taking regular
-            breaks. Here's why it's essential: Pausing throughout your workday
-            boosts both productivity and well-being, especially for remote
-            workers who tend to sit for long periods. Even a brief break helps
-            refresh your mind, reducing mental exhaustion and enhancing
-            concentration. For more tips, click More Well-being tips.
+            These four locations provide a peaceful escape from the hustle and
+            bustle of the city. Whether you're looking to unwind, recharge, or
+            simply disconnect from media and the digital world, these serene
+            locations provide the perfect environment for relaxation and
+            reflection.
+          </p>
+          <p>
+            <strong
+              ><em>Why is it important to take a break in nature?</em></strong
+            >
+          </p>
+          <p>
+            Stepping away from our busy routines and spending time in natural
+            environments helps reduce stress, clear the mind, and improve
+            overall well-being. Nature’s calming effect, with its fresh air,
+            soothing sounds, and open spaces, promotes relaxation and mental
+            clarity, allowing us to recharge and return with better focus and
+            creativity. In addition, taking breaks in nature boosts mood and
+            energy levels by encouraging physical movement and a connection to
+            the outdoors. This not only benefits our mental health but also
+            enhances our physical vitality, making it easier to tackle daily
+            challenges with renewed energy and a fresh perspective.
           </p>
         </article>
       </section>
@@ -102,31 +117,35 @@
     <section class="image-blocks">
       <section class="inner-blocks white-background">
         <section class="image-block-1">
-          <img src="img/connect-with-nature.webp" alt="" class="image-block" />
+          <img src="img/connect-nature.webp" alt="" class="image-block" />
           <article>
-            <h3>Go out and connect with nature</h3>
+            <h3>Kralingse Bos</h3>
             <p>
-              Spending time in nature helps you disconnect from work, relax both
-              your mind and body, and boost your overall happiness. Not only
-              does it improve your mood, but connecting with nature also gives
-              your eyes a much-needed break after spending long hours in front
-              of a screen. Learn about the best chill spots in
-              Rotterdam: Rotterdam chill spots.
+              A tranquil, expansive park featuring a beautiful lake, perfect for
+              a calming walk or a quiet moment by the water. You can also enjoy
+              the scenic views and nature trails that will help you clear your
+              mind.
             </p>
           </article>
+          <a href="#" class="general-button">Directions (Google Map)</a>
         </section>
 
         <section class="image-block-2">
-          <img src="img/taking-a-jog.webp" alt="" class="image-block" />
+          <img
+            src="img/wellbeing-tips-header.webp"
+            alt=""
+            class="image-block"
+          />
           <article>
-            <h3>Take a Walk or jog</h3>
+            <h3>Jan Evertsenplaats</h3>
             <p>
-              Step outside for a 10-minute walk or jog to get fresh air and
-              natural light. This brief break helps refresh your mind, improve
-              your mood, and give you a mental reset. Learn more about the best
-              practices for walking correctly: How to walk with good form.
+              A peaceful park in the heart of Rotterdam Centrum, surrounded by
+              buildings yet calm and tranquil. Perfect for relaxing, reading, or
+              simply unwinding in a serene environment, offering a quiet escape
+              from the bustling city.
             </p>
           </article>
+          <a href="#" class="general-button">Directions (Google Map)</a>
         </section>
       </section>
     </section>
@@ -136,27 +155,29 @@
         <section class="image-block-1">
           <img src="img/listening-to-music.webp" alt="" class="image-block" />
           <article>
-            <h3>Listen to Music</h3>
+            <h3>Joost Banckertsplaats</h3>
             <p>
-              Play your favorite music or a relaxing playlist to shift your
-              mood. Whether calming or energizing, music helps reset your
-              mindset and can make your work environment more enjoyable. Learn
-              more about the best audio streaming services: streaming services.
+              A peaceful green space in the center of Rotterdam, offering a
+              quiet break from the city's busy streets. Its calm atmosphere and
+              tidy greenery make it ideal for relaxing or spending a quiet
+              moment in a modern setting.
             </p>
           </article>
+          <a href="#" class="general-button">Directions (Google Map)</a>
         </section>
 
         <section class="image-block-2">
           <img src="img/healthy-snack.webp" alt="" class="image-block" />
           <article>
-            <h3>Hydrate and Snack</h3>
+            <h3>Schouwburgplein</h3>
             <p>
-              Take a moment to drink water and enjoy a healthy snack. This quick
-              refuel keeps you hydrated and energized, helping you stay focused
-              and refreshed throughout the day. Learn more about healthy
-              snacks: Healthy snacks.
+              A vibrant urban square in the heart of Rotterdam, known for its
+              modern design and dynamic atmosphere. It's a lively spot where
+              people gather, surrounded by cultural landmarks and offering a
+              space for events, relaxation, and socializing.
             </p>
           </article>
+          <a href="#" class="general-button">Directions (Google Map)</a>
         </section>
       </section>
     </section>
