--- a/test.html
+++ b/test.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+
+    <style>
+      body {
+      }
+
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30pt;
+        color: red;
+        text-shadow: 5px 2px 2px blue;
+      }
+
+      h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20pt;
+        color: blue;
+        text-shadow: 5px 2px 3px red;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Ola mundo como vai</h1>
+    <h2>Inicio</h2>
+  </body>
 </html>
