--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -8,9 +8,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="stylesheet" href="css/quick-breaks.css" />
+    <link rel="stylesheet" href="css/workspace-tips.css" />
     <link rel="stylesheet" type="text/css" href="css/general-styles.css" />
-    <title>Quick Breaks</title>
+    <title>Workspace Tips</title>
   </head>
   <body>
     <main>
@@ -74,7 +74,7 @@
 
           <!-- Hero Message Container -->
           <section class="hero-message-container">
-            <h1 class="hero-heading">Quick Breaks</h1>
+            <h1 class="hero-heading">Workspace Tips</h1>
           </section>
         </section>
       </section>
@@ -82,79 +82,67 @@
     <section class="section-4">
       <section class="inner-section-4">
         <article>
-          <h2>Need a break?</h2>
-          <h3>
-            Here are some quick activities to refresh your mind and body during
-            your workday.
-          </h3>
+          <h2>The Importance of a Comfortable Workspace</h2>
           <p>
-            The Well being tips page emphasizes the importance of taking regular
-            breaks. Here's why it's essential: Pausing throughout your workday
-            boosts both productivity and well-being, especially for remote
-            workers who tend to sit for long periods. Even a brief break helps
-            refresh your mind, reducing mental exhaustion and enhancing
-            concentration. For more tips, click More Well-being tips.
+            A comfortable workspace is crucial because it promotes better
+            physical health, enhances focus and productivity, reduces stress,
+            fosters creativity, and contributes to a positive work-life balance,
+            ultimately leading to more efficient, enjoyable, and sustainable
+            work.
           </p>
         </article>
       </section>
     </section>
 
-    <section class="image-blocks">
-      <section class="inner-blocks white-background">
-        <section class="image-block-1">
-          <img src="img/connect-with-nature.webp" alt="" class="image-block" />
-          <article>
-            <h3>Go out and connect with nature</h3>
+    <section class="isolation">
+      <section class="inner-isolation">
+        <article class="isolation-text">
+          <h2>Benefits of a Comfortable Workspace</h2>
+        </article>
+        <section class="isolation-blocks">
+          <article class="block-1">
+            <p><strong>Physical Health</strong></p>
             <p>
-              Spending time in nature helps you disconnect from work, relax both
-              your mind and body, and boost your overall happiness. Not only
-              does it improve your mood, but connecting with nature also gives
-              your eyes a much-needed break after spending long hours in front
-              of a screen. Learn about the best chill spots in
-              Rotterdam: Rotterdam chill spots.
+              A comfortable workspace can prevent physical strain and long-term
+              health issues. Ergonomically designed chairs, desks, and computer
+              setups reduce the risk of back pain, neck strain, eye fatigue, and
+              carpal tunnel syndrome. Proper posture and positioning ensure that
+              your body remains supported, minimizing discomfort during long
+              work hours.
+            </p>
+          </article>
+          <article class="block-2">
+            <p>
+              <strong>Improved Focus and Productivity</strong>
+            </p>
+            <p>
+              When your workspace is well-organized and comfortable, it becomes
+              easier to concentrate on tasks. Clutter and discomfort can be
+              distracting, leading to lower efficiency and more frequent breaks.
+              A neat, well-designed workspace promotes a focused, productive
+              environment.
             </p>
           </article>
         </section>
-
-        <section class="image-block-2">
-          <img src="img/taking-a-jog.webp" alt="" class="image-block" />
-          <article>
-            <h3>Take a Walk or jog</h3>
+        <section class="isolation-blocks">
+          <article class="block-1">
+            <p><strong>Mental Well-being</strong></p>
             <p>
-              Step outside for a 10-minute walk or jog to get fresh air and
-              natural light. This brief break helps refresh your mind, improve
-              your mood, and give you a mental reset. Learn more about the best
-              practices for walking correctly: How to walk with good form.
+              A comfortable and aesthetically pleasing workspace can reduce
+              stress and improve your mood. Natural lighting, personal touches,
+              and a clean, well-organized space help create a positive
+              atmosphere, which can boost motivation and mental clarity.
             </p>
           </article>
-        </section>
-      </section>
-    </section>
-
-    <section class="image-blocks">
-      <section class="inner-blocks">
-        <section class="image-block-1">
-          <img src="img/listening-to-music.webp" alt="" class="image-block" />
-          <article>
-            <h3>Listen to Music</h3>
+          <article class="block-2">
             <p>
-              Play your favorite music or a relaxing playlist to shift your
-              mood. Whether calming or energizing, music helps reset your
-              mindset and can make your work environment more enjoyable. Learn
-              more about the best audio streaming services: streaming services.
+              <strong>Increased Creativity</strong>
             </p>
-          </article>
-        </section>
-
-        <section class="image-block-2">
-          <img src="img/healthy-snack.webp" alt="" class="image-block" />
-          <article>
-            <h3>Hydrate and Snack</h3>
             <p>
-              Take a moment to drink water and enjoy a healthy snack. This quick
-              refuel keeps you hydrated and energized, helping you stay focused
-              and refreshed throughout the day. Learn more about healthy
-              snacks: Healthy snacks.
+              Comfort fosters creativity. When you're in a relaxed and conducive
+              environment, your mind is more likely to explore new ideas and
+              think critically. A comfortable workspace often encourages
+              innovative problem-solving and creative thinking.
             </p>
           </article>
         </section>
