index page, all buttons connected

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       </article>
       <section class="general-buttons">
         <a href="wellbeing-tips.html" class="general-button">Wellbeing Tips</a>
-        <a href="#" class="general-button">Quick breaks ideas</a>
-        <a href="#" class="general-button">Chill Spots</a>
+        <a href="quick-breaks.html" class="general-button">Quick breaks ideas</a>
+        <a href="chill-spots.html" class="general-button">Chill Spots</a>
       </section>
     </section>
   </section>
@@ -216,7 +216,7 @@
             today, and let's work together towards the sense of equilibrium
             that you truly deserve.</b>
         </p>
-        <button class="hero-button">Mental Health Resources</button>
+        <a href="wellbeing-tips.html" class="hero-button">Mental Health Resources</a>
       </article>
     </section>
   </section>
